<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal" android:background="#222222" android:gravity="center_vertical">
    <Button android:layout_width="fill_parent" android:text="@string/h264Viewer" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/buttonH264Viewer"></Button>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/h264toYuvDecode" android:id="@+id/buttonDecode"></Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/yuvViewer" android:id="@+id/buttonYuvViewer"/>

    <Button android:layout_width="fill_parent" android:text="@string/rgbViewer" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/buttonRgbViewer"></Button>
</LinearLayout>
