<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal" android:background="#222222" android:gravity="center_vertical">
    <Button
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_gravity="center_horizontal" 
         android:id="@+id/buttonCapture" 
         android:text="@string/capture">
        
    </Button>
    <Button 
        android:layout_height="wrap_content" 
        android:clickable="true"
        android:layout_gravity="center_vertical|center_horizontal" 
        android:layout_width="fill_parent" 
        android:text="@string/display" 
        android:id="@+id/buttonDecodeAndDisplay">
        
    </Button>

    <Button
        android:id="@+id/buttonExtraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Extraction" />

    <Button 
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal" 
        android:layout_width="fill_parent" 
        android:text="@string/exit" 
        android:id="@+id/buttonExit">
        
    </Button>

</LinearLayout>
